# smolagents

./: .gitignore  CHINESE_COMMENTS_SUMMARY.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  agent_type_comparison.md  chinese_agent_example.py  chinese_prompts_example.yaml  debug_web_search.py  e2b.Dockerfile  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  server.py  simple_debug_test.py  websearch_problem_analysis.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_documentation.yml  build_pr_documentation.yml  quality.yml  tests.yml
agents/: __init__.py  agent_types.py  agents.py  default_tools.py  document_question_answering.py  gradio_ui.py  image_question_answering.py  llm_engine.py  monitoring.py  prompts.py  python_interpreter.py  speech_to_text.py  text_to_speech.py  tools.py  translation.py  utils.py
docs/: README.md  deepseek_integration_guide.md
docs/source/: _config.py  _toctree.yml  agents.md  building_agents.md  building_good_agents.md  guided_tour.md  index.md  intro_agents.md  quicktour.md  tools.md
docs/source/conceptual_guides/: intro_agents.md  react.md
docs/source/en/: _toctree.yml  guided_tour.md  guided_tour.mdx  index.md  index.mdx  installation.mdx
docs/source/en/conceptual_guides/: intro_agents.md  intro_agents.mdx  react.md  react.mdx
docs/source/en/examples/: multiagents.md  multiagents.mdx  rag.md  rag.mdx  text_to_sql.md  text_to_sql.mdx  using_different_models.mdx  web_browser.md  web_browser.mdx
docs/source/en/reference/: agents.md  agents.mdx  models.md  models.mdx  tools.md  tools.mdx
docs/source/en/tutorials/: building_good_agents.md  building_good_agents.mdx  inspect_runs.md  inspect_runs.mdx  memory.mdx  secure_code_execution.md  secure_code_execution.mdx  tools.md  tools.mdx
docs/source/examples/: multiagents.md  rag.md  text_to_sql.md
docs/source/hi/: _toctree.yml  guided_tour.md  guided_tour.mdx  index.mdx
docs/source/hi/conceptual_guides/: intro_agents.md  intro_agents.mdx  react.md  react.mdx
docs/source/hi/examples/: multiagents.md  multiagents.mdx  rag.mdx  text_to_sql.mdx
docs/source/hi/reference/: agents.md  agents.mdx  tools.md  tools.mdx
docs/source/hi/tutorials/: building_good_agents.md  building_good_agents.mdx  inspect_runs.md  inspect_runs.mdx  secure_code_execution.md  secure_code_execution.mdx  tools.mdx
docs/source/main_classes/: agent.md  logging.md
docs/source/reference/: agents.md  tools.md
docs/source/tutorials/: building_good_agents.md  secure_code_execution.md  tools.md
docs/source/zh/: _toctree.yml  guided_tour.md  guided_tour.mdx  index.mdx
docs/source/zh/conceptual_guides/: intro_agents.mdx  react.md  react.mdx
docs/source/zh/examples/: multiagents.md  multiagents.mdx  rag.mdx  text_to_sql.md  text_to_sql.mdx  web_browser.mdx
docs/source/zh/reference/: agents.md  agents.mdx  models.mdx  tools.md  tools.mdx
docs/source/zh/tutorials/: building_good_agents.md  building_good_agents.mdx  inspect_runs.mdx  memory.mdx  secure_code_execution.mdx  tools.md  tools.mdx
examples/: agent_from_any_llm.py  agent_planning.py  agent_with_tools.py  baidu_search_example.py  benchmark.ipynb  create_agent_any_llm.py  ddg_leopard.py  deepseek_model_example.py  docker_example.py  dummytool.py  e2b_example.py  flux.ipynb  gradio_example.py  gradio_ui.py  gradio_upload.py  inspect_multiagent_run.py  inspect_runs.py  local_smollm.py  multi_llm_agent.py  multiple_tools.py  oneshot.py  orchestrator.py  quick_launch_gradio.py  rag.py  rag_using_chromadb.py  requirements.txt  sandboxed_execution.py  text_to_sql.py  tool_calling_agent.py  tool_calling_agent_from_any_llm.py  tool_calling_agent_mcp.py  tool_calling_agent_ollama.py  vlm_web_browser.py
examples/open_deep_research/: README.md  analysis.ipynb  requirements.txt  run.py  run_gaia.py  visual_vs_text_browser.ipynb
examples/open_deep_research/scripts/: mdconvert.py  text_inspector_tool.py  text_web_browser.py  visual_qa.py
examples/smolagents_benchmark/: run.py  score.ipynb
smolagents/: pyvenv.cfg
smolagents/Scripts/: activate  activate.bat
src/agents/: __init__.py  agent_types.py  agents.py  default_tools.py  docker_alternative.py  docker_python_executor.py  e2b_executor.py  gradio_ui.py  llm_engine.py  llm_engines.py  local_python_executor.py  monitoring.py  prompts.py  python_interpreter.py  search.py  tool.py  tool_validation.py  tools.py  types.py  utils.py
src/agents/default_tools/: base.py  search.py
src/agents/tools/: search.py
src/smolagents/: __init__.py  _function_type_hints_utils.py  _transformers_utils.py  agent_types.py  agents.py  cli.py  cli_extended.py  default_tools.py  docker_alternative.py  docker_python_executor.py  e2b_executor.py  gradio_ui.py  llm_engines.py  local_python_executor.py  logger.py  mcp_client.py  memory.py  models.py  monitoring.py  prompts.py  remote_executors.py  tool_validation.py  tools.py  types.py  utils.py  vision_web_browser.py  vlm_web_browser.py
src/smolagents/prompts/: code_agent.yaml  structured_code_agent.yaml  toolcalling_agent.yaml
tests/: conftest.py  test_agent_types.py  test_agents.py  test_all_docs.py  test_cli.py  test_deepseek.py  test_deepseek_comprehensive.py  test_deepseek_key.py  test_deepseek_simple.py  test_default_tools.py  test_e2b_executor.py  test_examples.py  test_final_answer.py  test_function_type_hints_utils.py  test_gradio_ui.py  test_import.py  test_local_python_executor.py  test_local_smolagents.py  test_mcp_client.py  test_memory.py  test_models.py  test_monitoring.py  test_python_interpreter.py  test_remote_executors.py  test_search.py  test_smolagents.py  test_tool_validation.py  test_toolkit.py  test_tools.py  test_tools_common.py  test_types.py  test_utils.py
tests/fixtures/: agents.py  tools.py
tests/utils/: markers.py
utils/: check_tests_in_ci.py
